--- a/blocks/team_member/view.css
+++ b/blocks/team_member/view.css
@@ -1,5 +1,4 @@
 html .ccm-page .team-member {
-    padding: 25px;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -12,8 +11,7 @@ html .ccm-page .team-member {
 }
 
 html .ccm-page .team-member img {
-    border-radius: 25px;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 html .ccm-page .team-member p, html .ccm-page .team-member .links {
@@ -26,8 +24,7 @@ html .ccm-page .team-member .links {
 }
 
 html .ccm-page .team-member .links a {
-    background: var(--bs-body);
-    color: #fff;
+    background-color: var(--bs-gray-100);
     border-radius: 50%;
     width: 35px;
     height: 35px;
@@ -41,4 +38,13 @@ html .ccm-page .team-member .links a {
 
 html .ccm-page .team-member .links a i {
     margin-left: 0 !important;
+    color: var(--bs-primary);
+}
+
+html .ccm-page .team-member .links a:hover {
+    background-color: var(--bs-primary);
+}
+
+html .ccm-page .team-member .links a:hover i {
+    color: var(--bs-gray-100);
 }
